--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 
 [dependencies]
 #bevy = "0.4"
-bevy = { path = "../bevy"}
+bevy = { git = "https://github.com/bevyengine/bevy" }
+
 
