--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,16 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
 [dependencies]
 #bevy = "0.4"
-bevy = { git = "https://github.com/bevyengine/bevy", branch = "main"}
 rand = "0.8.0"
+
+[dependencies.bevy]
+features = ["dynamic"]
+git = "https://github.com/bevyengine/bevy"
+branch = "main"
+
+
 
 
