Put audio in dedicated file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ default = [
   #"bevy/render",
   #"bevy/x11",
   "bevy_kira_audio/mp3",
-  "bevy_kira_audio/ogg"
+  "bevy_kira_audio/wav"
 ]
 
 [dependencies]
